--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link
-        href="aux.css"
+        href="styles-index.css"
         rel="stylesheet" 
     >
 </head>
 <body>
     <div class="container">
+        <header>
+            Logo-MiPerfil
+        </header>
         <nav>
             NavBar
         </nav>
+        <aside>ofertas</aside>
         <main>
             Main
         </main>
